<?xml version="1.0" encoding="utf-8"?>
<!--
This file is part of TumixMatrixOperator.
TumixMatrixOperator is free software: you can redistribute it and/or modify
it under the terms of the GNU Lesser General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

TumixMatrixOperator is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with TumixMatrixOperator.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/principalmenu"
                android:textSize="24dp"
                android:textStyle="bold" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="onEditClick"
                android:text="@string/editmatrizesbutton"
                android:textSize="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operations"
                android:textSize="16dp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="onAddingClick"
                android:text="@string/adding"
                android:textSize="16dp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="onSubtractingClick"
                android:text="@string/subtraction"
                android:textSize="16dp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="onMultiplicatingClick"
                android:text="@string/multiplication"
                android:textSize="16dp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="onExponentiatingClick"
                android:text="@string/exponentiation"
                android:textSize="16dp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="onDeterminatingClick"
                android:text="@string/determinant"
                android:textSize="16dp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="onSolvingSystemClick"
                android:text="@string/SystemOfLinearEquations"
                android:textSize="16dp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="onInvertingClick"
                android:text="@string/inversion"
                android:textSize="16dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>