<?xml version="1.0" encoding="utf-8"?>
<!--
This file is part of TumixMatrixOperator.
TumixMatrixOperator is free software: you can redistribute it and/or modify
it under the terms of the GNU Lesser General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

TumixMatrixOperator is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with TumixMatrixOperator.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filling_matrix"
                    android:textSize="16dp" >
                </TextView>

                <TextView
                    android:id="@+id/matrix_id"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="16dp"
                    android:textStyle="bold" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:text="@string/nrows"
                            android:textSize="14dp" />

                        <EditText
                            android:id="@+id/nrows"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:numeric="integer"
                            android:text="" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:text="@string/ncolumns"
                            android:textSize="14dp" />

                        <EditText
                            android:id="@+id/ncolumns"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:numeric="integer"
                            android:text="" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center" >

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="OnGenerateMatrixClick"
                        android:text="@string/generatematrix"
                        android:textSize="14dp" >
                    </Button>
                </LinearLayout>
            </LinearLayout>

            <EditText
                android:id="@+id/doubleinputbox"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:numeric="integer|signed|decimal" />

            <HorizontalScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/matrix_form"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical" />
            </HorizontalScrollView>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="OnOkClick"
                android:text="@string/ok"
                android:textSize="14dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>